# p4pico

./: .gitignore  CMakeLists.txt  Firmware.c  README.md  hello_world.c  pico_sdk_import.cmake
GUI/: GUI.py  PositionIndex.py  pySerialRead.py  testData.py  testing.py
microPython/: main.py  testingFour.py  unitTestDump.py
